[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/ships/HeavyBase.png" type="Texture" id=1]
[ext_resource path="res://Actors/Ship.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 44.0
height = 42.0

[node name="ShipHeavy" type="KinematicBody2D"]
rotation = 1.5708
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 3 )
shape = SubResource( 1 )

[node name="Engine1" type="Position2D" parent="."]
position = Vector2( -25, 58 )
__meta__ = {
"_edit_group_": true
}

[node name="Engine2" type="Position2D" parent="."]
position = Vector2( 0, 58 )
__meta__ = {
"_edit_group_": true
}

[node name="Engine3" type="Position2D" parent="."]
position = Vector2( 25, 58 )
__meta__ = {
"_edit_group_": true
}

[node name="ThrustLeft1" type="Position2D" parent="."]
position = Vector2( -57, 10 )
__meta__ = {
"_edit_group_": true
}

[node name="ThrustLeft2" type="Position2D" parent="."]
position = Vector2( -57, 35 )
__meta__ = {
"_edit_group_": true
}

[node name="ThrustRight1" type="Position2D" parent="."]
position = Vector2( 57, 10 )
__meta__ = {
"_edit_group_": true
}

[node name="ThrustRight2" type="Position2D" parent="."]
position = Vector2( 57, 35 )
__meta__ = {
"_edit_group_": true
}

[node name="Gun1" type="Position2D" parent="."]
position = Vector2( -27, -19 )
__meta__ = {
"_edit_group_": true
}

[node name="Gun2" type="Position2D" parent="."]
position = Vector2( 0, -28 )
__meta__ = {
"_edit_group_": true
}

[node name="Gun3" type="Position2D" parent="."]
position = Vector2( 28, -19 )
__meta__ = {
"_edit_group_": true
}

[node name="Utility1" type="Position2D" parent="."]
position = Vector2( 0, 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Utility2" type="Position2D" parent="."]
position = Vector2( -26, 24 )
__meta__ = {
"_edit_group_": true
}

[node name="Utility3" type="Position2D" parent="."]
position = Vector2( 25, 23 )
__meta__ = {
"_edit_group_": true
}

[node name="TweenBooster" type="Tween" parent="."]

[node name="TweenThrust" type="Tween" parent="."]
